--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "browserslist": "> 0.25%, not dead",
   "scripts": {
     "build": "cross-env webpack -p",
-    "start": "cross-env  webpack-dev-server -d --open "
+    "start": "cross-env  webpack-dev-server -d --open ",
+    "lint": "eslint src -c .eslintrc --ext js,jsx --fix",
+    "format": "prettier --write \"src/**/*.{js,jsx,css,scss}\""
   },
   "keywords": [
     "react"
@@ -42,6 +44,8 @@
     "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "pre-commit": "^1.2.2",
+    "prettier": "^1.19.1",
+    "prettier-eslint-cli": "^5.0.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "terser-webpack-plugin": "^2.3.2",
@@ -61,5 +65,9 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.0.0"
-  }
+  },
+  "pre-commit": [
+    "lint",
+    "format"
+  ]
 }
