--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@babel/polyfill": "^7.8.3",
     "antd": "^3.26.7",
     "axios": "^0.19.1",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
