--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "browserslist": "> 0.25%, not dead",
   "scripts": {
-    "build": "cross-env webpack -p",
-    "start": "cross-env  webpack-dev-server -d --open ",
+    "build": "cross-env webpack -p  --config ./webpack/webpack.prod.js ",
+    "start": "cross-env  webpack-dev-server -d --config ./webpack/webpack.dev.js --open ",
     "lint": "eslint src -c .eslintrc --ext js,jsx --fix",
     "format": "prettier --write \"src/**/*.{js,jsx,css,scss}\""
   },
@@ -21,6 +21,7 @@
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
+    "app-root-path": "^3.0.0",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
@@ -40,19 +41,23 @@
     "eslint-plugin-standard": "^4.0.1",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "pre-commit": "^1.2.2",
     "prettier": "^1.19.1",
     "prettier-eslint-cli": "^5.0.0",
+    "react-svg-loader": "^3.0.3",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
+    "svg-url-loader": "^3.0.3",
     "terser-webpack-plugin": "^2.3.2",
     "webpack": "^4.41.5",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1"
+    "webpack-dev-server": "^3.10.1",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.3",
